@@ -1,4 +1,8 @@
+
 2006-05-19  Ales Hakl  <ales at hakl dot net>
+
+	* src/dfsch.c (dfsch_reverse): list reversal function
+	(dfsch_mem*) Membership checking functions
 
 	* scm/test.scm: More tests
 
